fix: logs search view query fix, logs details view - attribute tags alignment fix

--- a/frontend/src/container/Toolbar/Toolbar.styles.scss
+++ b/frontend/src/container/Toolbar/Toolbar.styles.scss
@@ -2,11 +2,28 @@
 	display: grid;
 	grid-template-columns: 3fr auto auto;
 	padding: 8px 16px;
+	gap: 8px;
 
 	.timeRange {
 		display: flex;
 		padding-right: 8px;
 		align-items: center;
 		gap: 16px;
+	}
+}
+
+@media screen and (width <= 1300px) {
+	.toolbar {
+		grid-template-columns: repeat(1, 1fr);
+
+		.timeRange {
+			justify-content: flex-end;
+			padding-right: 0;
+		}
+
+		.rightActions {
+			display: flex;
+			justify-content: flex-end;
+		}
 	}
 }
